[package]
name = "convertable"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Non-reflexive version of From and Into"
homepage = "https://github.com/ryo33/convertable"
repository = "https://github.com/ryo33/convertable"
readme = "README.md"
keywords = ["convert", "non-reflexive", "no-std"]
categories = ["rust-patterns", "no-std"]

[dependencies]
